<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LogIn" android:background="#FFFFFF">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/white_silhouette_chess_piece_remix_pawn_pen"
            android:id="@+id/opening_screen_background_image" android:visibility="visible" tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:contentDescription="@string/LogIn__background_image"
            />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:background="@color/black_brandName"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/brand_name"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintVertical_bias="0.56"
            android:importantForAutofill="no" android:hint="@string/LogIn__password"
            android:textColorHint="@android:color/darker_gray" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/brand_name"
            android:textColor="@color/blackBrandName" android:textSize="@dimen/fontSize_brandName_56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintVertical_bias="0.721" android:visibility="visible" tools:visibility="visible"
            android:text="@string/LogIn__lichess_text"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/login"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:textAllCaps="false" tools:text="log in" android:visibility="visible" tools:visibility="visible"
            android:text="@string/LogIn_log_in_button" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.973"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/username"
            android:background="@color/black_brandName"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/brand_name"
            android:layout_marginBottom="42dp" app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.0"
            android:importantForAutofill="no" android:hint="@string/LogIn__hing_username"
            android:textColorHint="@android:color/darker_gray"/>
</androidx.constraintlayout.widget.ConstraintLayout>